--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
   </head>
   <body>
     <div class="flexbox-container">
-    <h1><span class="green">Rogue</span> Pickings</h1>
+    <h1 className="h1"><span class="green">Rogue</span> Pickings</h1>
     <div class="navbox">
   <ul class="nav green" >
-    <li>About</li>
-    <li>Menu</li>
-    <li>Locations</li>
-    <li>Gallery</li>
-    <li>Reviews</li>
-    <li>Content</li>
+    <li><a href="about/index.html">About</a></li>
+    <li><a href="menu/index.html">Menu</a></li>
+    <li><a href="locations/index.html">Locations</a></li>
+    <li><a href="gallery/index.html">Gallery</a></li>
   </ul>
 </div>
   </div>
@@ -49,8 +47,5 @@
 <div class="footer">
   <h3>Powered by lots of <span class="cursive"> fresh</span> ingredients</h3>
 </div>
-
-
-
   </body>
 </html>
