--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,32 +1,58 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../index.css" href="theme.css">
-    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+<title>W3.CSS</title>
 
-<link href="https://fonts.googleapis.com/css?family=Charm" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="../index.css" href="theme.css">
 
-    <title>title</title>
-  </head>
-  <body>
-    <div class="flexbox-container">
-    <h1 className="h1"><a href="../index.html"><span class="green">Rogue</span></a> Pickings</h1>
-    <div class="navbox">
-  <ul class="nav green" >
-    <li><a href="../about/index.html">About</a></li>
-    <li><a href="../menu/index.html">Menu</a></li>
-    <li><a href="../locations/index.html">Locations</a></li>
-    <li><a href="../gallery/index.html">Gallery</a></li>
-  </ul>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+.mySlides {display:none;
+width: 45%; height: 650px;margin-top: 2%;}
+</style>
+<body>
+  <div class="flexbox-container">
+  <h1 className="h1"><a href="../index.html"><span class="green">Rogue</span></a> Pickings</h1>
+  <div class="navbox">
+<ul class="nav green" >
+  <li><a href="../about/index.html">About</a></li>
+  <li><a href="../menu/index.html">Menu</a></li>
+  <li><a href="../locations/index.html">Locations</a></li>
+  <li><a href="../gallery/index.html">Gallery</a></li>
+</ul>
 </div>
-  </div>
-<div id="logo">
-  <img src="../images/market.png"/>
-<div class="blurb">
-  <h3 class="green">Welcome to our little corner of the internet!</h3>
-  <p>Welcome to Rogue Pickings, the roaming truck bringing you the freshest ingredients and ideas in food. Our team works hard so you can be sure our ingredients are always fresh and picked carefully. Our menu changes every day and is made with you in mind. We can't wait to come to you! Check out our locations to see where you can find us. </p>
-<div>
+</div>
 
-  </body>
+
+<div class="w3-content w3-display-container">
+  <img class="mySlides" src="../images/cu.jpg" style="width:100%">
+  <img class="mySlides" src="../images/lettuce.jpg" style="width:100%">
+  <img class="mySlides" src="../images/peppers.jpg" style="width:100%">
+  <img class="mySlides" src="../images/radishes.jpg" style="width:100%">
+
+  <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+  <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+</div>
+
+<script>
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+     x[i].style.display = "none";
+  }
+  x[slideIndex-1].style.display = "block";
+}
+</script>
+
+</body>
 </html>
