--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS</title>
+<title>Rouge Pickings</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../index.css" href="theme.css">
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
 .mySlides {display:none;
-width: 45%; height: 650px;margin-top: 2%;}
+width: 45%; height: 600px;margin-top: 2%;}
 </style>
 <body>
   <div class="flexbox-container">
