--- a/menu/index.html
+++ b/menu/index.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css?family=Charm" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css?family=Hind+Guntur|Sacramento" rel="stylesheet">
 
-    <title>title</title>
+    <title>Rogue Pickings</title>
   </head>
   <body>
     <div class="flexbox-container">
