--- a/locations/index.html
+++ b/locations/index.html
@@ -7,7 +7,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Charm" rel="stylesheet">
 
-    <title>title</title>
+    <title>Rogue Pickings</title>
   </head>
   <body>
     <div class="flexbox-container">
